; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_dbus-unit.c_bus_set_transient_emergency_action.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_dbus-unit.c_bus_set_transient_emergency_action.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"s\00", align 1
@SD_BUS_ERROR_INVALID_ARGS = common dso_local global i32 0, align 4
@EOPNOTSUPP = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [40 x i8] c"%s setting invalid for manager type: %s\00", align 1
@.str.2 = private unnamed_addr constant [23 x i8] c"Invalid %s setting: %s\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"%s=%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i8*, i32*, i32*, i32, i32*)* @bus_set_transient_emergency_action to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bus_set_transient_emergency_action(%struct.TYPE_4__* %0, i8* %1, i32* %2, i32* %3, i32 %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_4__*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32* %5, i32** %13, align 8
  %18 = load i32*, i32** %10, align 8
  %19 = call i32 @assert(i32* %18)
  %20 = load i32*, i32** %11, align 8
  %21 = call i32 @sd_bus_message_read(i32* %20, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** %14)
  store i32 %21, i32* %16, align 4
  %22 = load i32, i32* %16, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %6
  %25 = load i32, i32* %16, align 4
  store i32 %25, i32* %7, align 4
  br label %62

26:                                               ; preds = %6
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @MANAGER_IS_SYSTEM(i32 %29)
  store i32 %30, i32* %17, align 4
  %31 = load i8*, i8** %14, align 8
  %32 = load i32, i32* %17, align 4
  %33 = call i32 @parse_emergency_action(i8* %31, i32 %32, i32* %15)
  store i32 %33, i32* %16, align 4
  %34 = load i32, i32* %16, align 4
  %35 = icmp slt i32 %34, 0
  br i1 %35, label %36, label %48

36:                                               ; preds = %26
  %37 = load i32*, i32** %13, align 8
  %38 = load i32, i32* @SD_BUS_ERROR_INVALID_ARGS, align 4
  %39 = load i32, i32* %16, align 4
  %40 = load i32, i32* @EOPNOTSUPP, align 4
  %41 = sub nsw i32 0, %40
  %42 = icmp eq i32 %39, %41
  %43 = zext i1 %42 to i64
  %44 = select i1 %42, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i64 0, i64 0)
  %45 = load i8*, i8** %9, align 8
  %46 = load i8*, i8** %14, align 8
  %47 = call i32 @sd_bus_error_setf(i32* %37, i32 %38, i8* %44, i8* %45, i8* %46)
  store i32 %47, i32* %7, align 4
  br label %62

48:                                               ; preds = %26
  %49 = load i32, i32* %12, align 4
  %50 = call i32 @UNIT_WRITE_FLAGS_NOOP(i32 %49)
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %61, label %52

52:                                               ; preds = %48
  %53 = load i32, i32* %15, align 4
  %54 = load i32*, i32** %10, align 8
  store i32 %53, i32* %54, align 4
  %55 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %56 = load i32, i32* %12, align 4
  %57 = load i8*, i8** %9, align 8
  %58 = load i8*, i8** %9, align 8
  %59 = load i8*, i8** %14, align 8
  %60 = call i32 @unit_write_settingf(%struct.TYPE_4__* %55, i32 %56, i8* %57, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0), i8* %58, i8* %59)
  br label %61

61:                                               ; preds = %52, %48
  store i32 1, i32* %7, align 4
  br label %62

62:                                               ; preds = %61, %36, %24
  %63 = load i32, i32* %7, align 4
  ret i32 %63
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @sd_bus_message_read(i32*, i8*, i8**) #1

declare dso_local i32 @MANAGER_IS_SYSTEM(i32) #1

declare dso_local i32 @parse_emergency_action(i8*, i32, i32*) #1

declare dso_local i32 @sd_bus_error_setf(i32*, i32, i8*, i8*, i8*) #1

declare dso_local i32 @UNIT_WRITE_FLAGS_NOOP(i32) #1

declare dso_local i32 @unit_write_settingf(%struct.TYPE_4__*, i32, i8*, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
